@@ -2,8 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -25,7 +23,7 @@ public class ConvertList2ArrayTest {
 
     @Test
     public void when7ElementThen9() {
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 3);
         int[][] expect = {{1, 2, 3},
                           {4, 5, 6},
                           {7, 0, 0}};
@@ -34,7 +32,7 @@ public class ConvertList2ArrayTest {
 
     @Test
     public void when5ElementThen6() {
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5), 2);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5), 2);
         int[][] expect = {{1, 2, 3},
                           {4, 5, 0}};
         assertThat(result, is(expect));
@@ -42,7 +40,7 @@ public class ConvertList2ArrayTest {
 
     @Test
     public void when9ElementThen12() {
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9), 4);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9), 4);
         int[][] expect = {{1, 2, 3},
                           {4, 5, 6},
                           {7, 8, 9},
@@ -52,7 +50,7 @@ public class ConvertList2ArrayTest {
 
     @Test
     public void when6ElementThen6() {
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6), 2);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6), 2);
         int[][] expect = {{1, 2, 3},
                           {4, 5, 6}};
         assertThat(result, is(expect));
@@ -60,22 +58,17 @@ public class ConvertList2ArrayTest {
 
     @Test
     public void when2ArraysInListThenOneList() {
-        List<int[]> arrayList = new ArrayList<>();
-        arrayList.add(new int[]{1, 2, 3});
-        arrayList.add(new int[]{4, 5, 6});
-        List<Integer> result = list.convert(arrayList);
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> result = list.convert(List.of(
+                new int[]{1, 2, 3}, new int[]{4, 5, 6}));
+        List<Integer> expected = List.of(1, 2, 3, 4, 5, 6);
         assertThat(result, is(expected));
     }
 
     @Test
     public void when3ArrasInListThenOneList() {
-        List<int[]> arrayList = new ArrayList<>();
-        arrayList.add(new int[]{1, 2, 3, 4});
-        arrayList.add(new int[]{5, 6});
-        arrayList.add(new int[]{7, 8, 9});
-        List<Integer> result = list.convert(arrayList);
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<Integer> result = list.convert(
+                List.of(new int[]{1, 2, 3, 4}, new int[]{5, 6}, new int[]{7, 8, 9}));
+        List<Integer> expected = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
         assertThat(result, is(expected));
     }
 }
